editing responsivity and something else

--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ label {
     height: 350px;
 }
 .one {
-    background-color: #22223B;
+    background-color: #3a3a5b;
 }
 .two {
     background-color: #4A4E69;
@@ -148,7 +148,7 @@ label {
 @media (max-width: 821px) {
     .burger {
         display: block;
-        position: fixed;
+        position: absolute;
         top: 0;
         right: 0;
         display: grid;
@@ -182,5 +182,15 @@ label {
         letter-spacing: 10px;
         text-transform: uppercase;
         
+    }
+    .btn_to_top {
+        bottom: 1.5rem;
+        right: 1.5rem;
+    }
+    .btn_to_top svg {
+        width: 60px;
+        margin: 0;
+        padding: 0;
+        fill: black;
     }
 }
